--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
           let currentURL = window.location.href;
           if (currentURL.includes('?')) {
             
-            let redirectURL = "https://xn--42c5a4clb2bd8a2m.com/register?referral_code=qhaisar?" + currentURL.split('?')[1];
+            let redirectURL = "https://xn--42c5a4clb2bd8a2m.com/register?referral_code=qhaisar&" + currentURL.split('?')[1];
             $('#redirectLink, #redirectLink2, #redirectLink3').attr('href', redirectURL);
           }
         })
