--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <html lang="id">
 
 <head>
+
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5JV55MKX');</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Daftar Segera !!!</title>
@@ -1134,7 +1141,10 @@
 </head>
 
 <body>
-    
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5JV55MKX"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <div class="content">
         <div class="container">
             <div class="row mtop">
