--- a/nobu/index.html
+++ b/nobu/index.html
@@ -1,1 +1,228 @@
 
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>NOBU99</title>
+    <link itemprop="mainEntityOfPage" rel="canonical" href="https://lucky-7nt.pages.dev/nobu/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://lucky-7nt.pages.dev/nobu/slot431f.css">
+    <meta name="robots" content="noindex" />
+    <meta name="page-locale" content="id,en">
+    <meta content="indonesian" name="language">
+    <link rel="preload" as="image" href="https://valleycarclinic.com.au/nobu99.webp" />
+
+ 
+</head>
+
+<style>
+    @keyframes slide-in {
+        0% {
+            top: -100%;
+        }
+        100% {
+            top: 50%;
+        }
+    }
+
+    .link-container {
+        display: flex;
+        justify-content: center;
+        font-size: var(--x-large-font);
+        padding: 0;
+        width: 100%;
+    }
+
+    .link-container a {
+        width: 50%;
+        text-align: center;
+        padding: 15px 20px;
+        text-transform: uppercase;
+        color: #ffffff;
+        text-decoration: none;
+    }
+
+    .register-button {
+        background-image: linear-gradient(rgb(104, 2, 2), rgb(203, 0, 0));
+        background-color: initial;
+    }
+
+    .login-button {
+        background-image: linear-gradient(rgb(0, 12, 153), rgb(7, 71, 102));
+        background-color: initial;
+    }
+</style>
+
+<body>
+
+
+    <!-- Header Section -->
+    <header>
+        <div class="logo-container">
+            <img src="https://valleycarclinic.com.au/logo-nobu99.webp" alt="Your Logo" id="logo">
+        </div>
+        
+    </header>
+
+    <!-- Main Content Area -->
+    <main>
+        <img src="https://valleycarclinic.com.au/nobu99.webp" alt="Your Artwork" id="artwork">
+
+        <!-- CTA Buttons -->
+        <div id="cta-buttons">
+            <a href="https://lucky-7nt.pages.dev/nobu/login.html" class="cta-link"> <!-- Add this line -->
+                <button class="cta-button">DAFTAR DISINI</button>
+            </a> <!-- And this line -->
+        </div>
+        <div class="neon-text">LIVE RTP</div>
+    </main>
+    <!-- Animation Section -->
+    <div id="animation-section">
+        <!-- Your animation code goes here -->
+    </div>
+
+    <div class="content">
+        <div id="data" style="display: none"></div>
+        <div id="wrapper" class="wrapper">
+            <!-- ... rest of your code (cards, images, etc.) ... -->
+            <div class="card">
+                <div class="card-content">
+                   <img class="img-zoom" src="starlightprincess1.webp" alt="ROOSTER RUMBLE?v=6.0" style="width: 100%" />
+                    <div style="z-index: 10" class="percent">
+                        <p id="percent-txt" class="percent-txt" style="z-index: 15"></p>
+                        <div id="percent-bar" class="percent-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="" style="width: 0"></div>
+                    </div>
+                    <div class="d-grid gap-2 jam">
+                        <div class="jamgacor jamBg">
+                            <h5>JAM GACOR</h5>
+                            <h5 class="jamgacorRange">XX - XX</h5>
+                        </div>
+                        <div class="pola jamBg">
+                            <h5>POLA</h5>
+                            <p class="pola1"></p>
+                            <p class="pola2"></p>
+                            <p class="pola3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-content">
+                  <img class="img-zoom" src="r3r23rGates-of-Olympus.webp" alt="ROOSTER RUMBLE?v=6.0" style="width: 100%" />
+                    <div style="z-index: 10" class="percent">
+                        <p id="percent-txt" class="percent-txt" style="z-index: 15"></p>
+                        <div id="percent-bar" class="percent-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="" style="width: 0"></div>
+                    </div>
+                    <div class="d-grid gap-2 jam">
+                        <div class="jamgacor jamBg">
+                            <h5>JAM GACOR</h5>
+                            <h5 class="jamgacorRange">XX - XX</h5>
+                        </div>
+                        <div class="pola jamBg">
+                            <h5>POLA</h5>
+                            <p class="pola1"></p>
+                            <p class="pola2"></p>
+                            <p class="pola3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                   <img class="img-zoom" src="Mahjong Ways 2-min.webp" style="width: 100%" />
+                    <div style="z-index: 10" class="percent">
+                        <p id="percent-txt" class="percent-txt" style="z-index: 15"></p>
+                        <div id="percent-bar" class="percent-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="" style="width: 0"></div>
+                    </div>
+                    <div class="d-grid gap-2 jam">
+                        <div class="jamgacor jamBg">
+                            <h5>JAM GACOR</h5>
+                            <h5 class="jamgacorRange">XX - XX</h5>
+                        </div>
+                        <div class="pola jamBg">
+                            <h5>POLA</h5>
+                            <p class="pola1"></p>
+                            <p class="pola2"></p>
+                            <p class="pola3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                   <img class="img-zoom" src="https://media.fastchecker.us/idnsmedia/is/slots-v3/pgsoft/Mahjong Ways-min.webp?v=6.0" alt="ROOSTER RUMBLE?v=6.0" style="width: 100%" />
+                    <div style="z-index: 10" class="percent">
+                        <p id="percent-txt" class="percent-txt" style="z-index: 15"></p>
+                        <div id="percent-bar" class="percent-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="" style="width: 0"></div>
+                    </div>
+                    <div class="d-grid gap-2 jam">
+                        <div class="jamgacor jamBg">
+                            <h5>JAM GACOR</h5>
+                            <h5 class="jamgacorRange">XX - XX</h5>
+                        </div>
+                        <div class="pola jamBg">
+                            <h5>POLA</h5>
+                            <p class="pola1"></p>
+                            <p class="pola2"></p>
+                            <p class="pola3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <img class="img-zoom" src="https://media.fastchecker.us/idnsmedia/is/slots-v3/t1-habanero/SGTheKoiGate.webp?v=6.0" alt="ROOSTER RUMBLE?v=6.0" style="width: 100%" />
+                    <div style="z-index: 10" class="percent">
+                        <p id="percent-txt" class="percent-txt" style="z-index: 15"></p>
+                        <div id="percent-bar" class="percent-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="" style="width: 0"></div>
+                    </div>
+                    <div class="d-grid gap-2 jam">
+                        <div class="jamgacor jamBg">
+                            <h5>JAM GACOR</h5>
+                            <h5 class="jamgacorRange">XX - XX</h5>
+                        </div>
+                        <div class="pola jamBg">
+                            <h5>POLA</h5>
+                            <p class="pola1"></p>
+                            <p class="pola2"></p>
+                            <p class="pola3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-content">
+                    <img class="img-zoom" src="https://media.fastchecker.us/idnsmedia/is/slots-v3/t1-pragmatic/Power of Thor Megaways.webp?v=6.0" alt="ROOSTER RUMBLE?v=6.0" style="width: 100%" />
+                    <div style="z-index: 10" class="percent">
+                        <p id="percent-txt" class="percent-txt" style="z-index: 15"></p>
+                        <div id="percent-bar" class="percent-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="" style="width: 0"></div>
+                    </div>
+                    <div class="d-grid gap-2 jam">
+                        <div class="jamgacor jamBg">
+                            <h5>JAM GACOR</h5>
+                            <h5 class="jamgacorRange">XX - XX</h5>
+                        </div>
+                        <div class="pola jamBg">
+                            <h5>POLA</h5>
+                            <p class="pola1"></p>
+                            <p class="pola2"></p>
+                            <p class="pola3"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+    <script src="https://lucky-7nt.pages.dev/nobu/slot4963.js"></script>
+    <script src="https://lucky-7nt.pages.dev/nobu/slide.js"></script>
+</body>
+
+</html>
