--- a/nobu/index.html
+++ b/nobu/index.html
@@ -17,7 +17,13 @@
     <meta content="indonesian" name="language">
     <link rel="preload" as="image" href="https://valleycarclinic.com.au/nobu99.webp" />
 
- 
+
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-K5KRNPSB');</script>
+
 </head>
 
 <style>
@@ -59,6 +65,9 @@
 </style>
 
 <body>
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K5KRNPSB"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <!-- Header Section -->
