--- a/nobu/index.html
+++ b/nobu/index.html
@@ -84,7 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <!-- CTA Buttons -->
         <div id="cta-buttons">
-            <a href="https://lucky-7nt.pages.dev/nobu/login.html" class="cta-link"> <!-- Add this line -->
+            <a id="button" href="https://lucky-7nt.pages.dev/nobu/login.html" class="cta-link"> <!-- Add this line -->
                 <button class="cta-button">DAFTAR DISINI</button>
             </a> <!-- And this line -->
         </div>
