--- a/nobu/login.html
+++ b/nobu/login.html
@@ -1,2 +1,2 @@
 <title>LOADING...</title>
-<script>window.location="https://nobu99asli.site/register?referral_code=maxwin";</script>
+<script>window.location="https://nobu99asli.site/register?referral_code=08fadal";</script>
